--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Particle.js para efeito de partículas -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <!-- CSS Personalizado -->
     <style>
         /* Cores do Discord */
@@ -33,6 +35,14 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
+        }
+        #particles-js {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: var(--discord-black);
+            z-index: -1;
         }
         .container {
             background-color: var(--discord-gray);
@@ -42,18 +52,20 @@
             max-width: 500px;
             width: 100%;
             text-align: center;
+            position: relative;
+            z-index: 1;
         }
         h1 {
             color: var(--discord-green);
             font-size: 2.5rem;
             margin-bottom: 1.5rem;
-            font-weight: 700; /* Peso mais grosso para o título */
+            font-weight: 700;
         }
         p {
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 1.5rem;
-            font-weight: 400; /* Peso normal para o texto */
+            font-weight: 400;
         }
         .btn-discord {
             background-color: var(--discord-blurple);
@@ -62,11 +74,12 @@
             padding: 0.75rem 1.5rem;
             border-radius: 8px;
             font-size: 1rem;
-            font-weight: 600; /* Peso semi-negrito para o botão */
-            transition: background-color 0.3s ease;
+            font-weight: 600;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         .btn-discord:hover {
             background-color: #4752C4;
+            transform: translateY(-5px);
         }
         .footer {
             margin-top: 2rem;
@@ -76,7 +89,7 @@
         .footer a {
             color: var(--discord-blurple);
             text-decoration: none;
-            font-weight: 600; /* Peso semi-negrito para links */
+            font-weight: 600;
         }
         .footer a:hover {
             text-decoration: underline;
@@ -93,6 +106,7 @@
     </style>
 </head>
 <body>
+    <div id="particles-js"></div>
     <div class="container animate__animated animate__fadeInUp">
         <h1 class="animate__animated animate__bounceIn">Registro Concluído!</h1>
         <p class="animate__animated animate__fadeIn">
@@ -138,6 +152,10 @@
                 scale: 1,
                 ease: "power2.out",
             });
+        });
+        // Inicializar Particle.js
+        particlesJS.load('particles-js', 'particles.json', function() {
+            console.log('callback - particles.js config loaded');
         });
     </script>
 </body>
